--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "lucide-react": "^0.554.0",
-    "next": "15.3.1",
+    "next": "^15.3.6",
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "0.4.6",
     "pg": "^8.16.3",
@@ -90,7 +90,7 @@
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
     "@typescript-eslint/parser": "8.34.1",
-    "eslint": "9.25.1",
+    "eslint": "^9.39.1",
     "eslint-config-next": "15.3.4",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.31.0",
